--- a/apps/baltazar/package.json
+++ b/apps/baltazar/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "nodemon api/index.ts"
   },
   "keywords": [],
   "author": "",
